[metadata]
name = feeds
version = 0.1.0
description = API as required in the _Proposed Version 1_ from the _Product Requirement Document for the Mobility Database_
long_description = file: README.md
keywords = OpenAPI Mobility Data Catalog API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src

[tool:pytest]
testpaths=tests
norecursedirs=tests/test_utils