[metadata]
name = tokens
version = 0.1.0
description = API for the authentication tokens to access the Mobility Database_
long_description = file: README.md
keywords = OpenAPI Mobility Data Catalog API Tokens
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options.packages.find]
where = src